--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
   </head>
   <body>
-    <script src="app6.js">
-    </script>
+    <script src="jquery.min.js"></script>
+    <script src="jquery.js"></script>
   </body>
 </html>
